update app: add update, delete, work with cookie

--- a/hexlet-flask-example/templates/courses/layout.html
+++ b/hexlet-flask-example/templates/courses/layout.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
     <title>{% block title %}Flask проект{% endblock %}</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <style>
         * Стили для flash сообщений */
         .alert {
