--- a/hexlet-flask-example/templates/users/show.html
+++ b/hexlet-flask-example/templates/users/show.html
@@ -4,21 +4,26 @@
 
 {% block content %}
     <h1>All Users</h1>
-    
-    <form method="GET" action="/users/search">
-        <input type="text" required name="search" value="{{ search }}" placeholder="Search by name">
-        <button type="submit">Search</button>
-    </form>
-    
     <table>
         {% for user in users %}
         <tr>      
             <td>{{ user['id'] }}</td>
-            <td><a href="{{ url_for('get_users_id', id=user['id']) }}">{{ user['first_name'] }}</a></td>     
+            <td><a href="{{ url_for('get_users_id', id=user['id']) }}">{{ user['name'] }}</a></td>     
         </tr>
         {% endfor %}
     </table>
+    <p>Навигация #1</p>
+    {% if prev_page is not none %}
+        <a href="{{ url_for('get_users', page=prev_page) }}">Назад</a>
+    {% endif %}
 
+        Страница {{ page }}
+
+    {% if next_page is not none %}
+        <a href="{{ url_for('get_users', page=next_page) }}">Вперед</a>
+    {% endif %}
+
+    
     <h2>Add new user</h2>
     {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
@@ -27,6 +32,7 @@
             {% endfor %}
         {% endif %}
     {% endwith %}
+
     <form action="/users/new" method="post">
         <div>
             <label>Имя
@@ -44,6 +50,6 @@
                 <div>{{ errors['email'] }}</div>
             {% endif %}
         </div>
-        <input type="submit" value="Sign Up">
+        <input type="submit" value="Add">
     </form>
 {% endblock %}
