--- a/hexlet-flask-example/templates/users/show_user_id.html
+++ b/hexlet-flask-example/templates/users/show_user_id.html
@@ -1,9 +1,30 @@
+{% extends "courses/layout.html" %}
+
+{% block title %}User {% endblock %}
+
+{% block content %}
 <p><a href="/users">Пользователи</a></p>
+{% with messages = get_flashed_messages(with_categories=true) %}
+{% if messages %}
+    {% for category, message in messages %}
+    <div class="alert alert-{{ category }}">{{ message }}</div>
+    {% endfor %}
+{% endif %}
+{% endwith %}
 <table>    
     <tr>
         {% for key, value in user.items() %}
         <div>
           {{ key }}: {{ value }}
         </div>
-      {% endfor %}   
+      {% endfor %}
+      {% if guest %} 
+          <a href="{{ url_for('edit_user', id=user.id) }}">Редактировать</a>
+      {% endif %}
 </table>
+<form action="{{ url_for('delete_user', id=user.id) }}" method="post" 
+onsubmit="return confirm('Are you sure you want to delete user? This action cannot be undone.');">
+<input type="submit" value="Remove">
+</form>
+
+{% endblock %}
