--- a/hexlet-flask-example/templates/courses/layout.html
+++ b/hexlet-flask-example/templates/courses/layout.html
@@ -48,6 +48,14 @@
     {% endblock %}
 </div>
 <div id="content">
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">{{ message }}</div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+
     {% block content %}{% endblock %}
 </div>
 </body>
